@@ -249,7 +249,7 @@
 	USECODE_INTRINSIC_PTR(set_polymorph),			// 0xb3    Set Polymorph
 	USECODE_INTRINSIC_PTR(UNKNOWN),				// 0xb4
 	USECODE_INTRINSIC_PTR(UNKNOWN),				// 0xb5
-	USECODE_INTRINSIC_PTR(UNKNOWN),				// 0xb6
+	USECODE_INTRINSIC_PTR(teleport),			// 0xb6
 	USECODE_INTRINSIC_PTR(prev_schedule),			// 0xb7 ???Guessing.
 	USECODE_INTRINSIC_PTR(UNKNOWN),				// 0xb8
 	USECODE_INTRINSIC_PTR(UNKNOWN),				// 0xb9
